release: prepare 0.4.0